5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1831_1639.log
== TEST (2019-06-13 16:21:51) 
-- CODE:
from numpy import *
p = array(eval(input()))
e = 0
for i in range(size(p)):
	if i%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if i%2==0:
		c[a]= p[i]
	a = a+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:22:31) 
-- CODE:
from numpy import *
p = array(eval(input()))
e = 0
for i in range(size(p)):
	if i%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if i%2==0:
		c[a]= p[i]
	a = a+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:22:59) 
-- CODE:
from numpy import *
p = array(eval(input('')))
e = 0
for i in range(size(p)):
	if i%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if i%2==0:
		c[a]= p[i]
	a = a+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:43) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if i%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if i%2==0:
		c[a]= p[i]
	a = a+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:23) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if i%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if i%2==0:
		c[a]= p[i]
	a = a+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:41) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if i%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if i%2==0:
		c[a]= p[i]
	a = a+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:25:27) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if i%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if i%2==0:
		c[a]= p[i]
	a = a+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:25:44) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if i%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if i%2==0:
		c[a]= p[i]
	a = a+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:32) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if i%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if i%2==0:
		c[a]= i
	a = a+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:28:30) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if i%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if i%2==0:
		c[a] = i
		a = a+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:31:20) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if i%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in p
	if i%2==0:
		c[a] = 
		a = a+1
print(c)
-- ERROR:
File "XXXX", line 10
    for i in p
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:31:30) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if i%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in size(p)
	if i%2==0:
		c[a] = 
		a = a+1
print(c)
-- ERROR:
File "XXXX", line 10
    for i in size(p)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:31:38) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if i%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(p)
	if i%2==0:
		c[a] = 
		a = a+1
print(c)
-- ERROR:
File "XXXX", line 10
    for i in range(p)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:31:45) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if i%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(p):
	if i%2==0:
		c[a] = 
		a = a+1
print(c)
-- ERROR:
File "XXXX", line 12
    c[a] = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:32:39) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if p[i]%2==0:
		c[a] = p[i]
	a = a+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:21) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if p[i]%2==0:
		c[a] = i
	a = a+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:35) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if p[i]%2==0:
		c[a] = i
a = a+1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:13) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if p[i]%2==0:
		c[a] = i
a = a+1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:28) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if p[i]%2==0:
		c[a] = p[i]
a = a+1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:23) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if p[i]%2==0:
		c[a] = p[a]
a = a+1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:32) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if p[i]%2==0:
		c[a] = p[i]
a = a+1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:26) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if p[i]%2==0:
		c[i] = p[a]
a = a+1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:37) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if p[i]%2==0:
		c[a] = p[i]
   a = a+1
print(e)
print(c)
-- ERROR:
File "XXXX", line 13
    a = a+1
          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:53) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if p[i]%2==0:
		c[a] = p[i]
	a = a+1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:43:50) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1

b = 0
c = zeros(size(b))
for i in range(size(p)):
	a = 0
	if p[i]%2==0:
		c[a] = p[i]
	a = a+1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:45:30) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1

b = 0
c = zeros(size(b))
for i in range(size(p)):
	a = 0
	if p[i]%2==0:
		c[b] = p[i]
		b = b+1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:45:46) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1

b = 0
c = zeros(size(b))
for i in range(size(p)):
	a = 0
	if p[i]%2==0:
		c[b] = p[i]
	b = b+1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:50) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(p[i]):
	if p[i]%2==0:
		c[b] = p
	b = b+1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:43) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(p[i]):
	if p[i]%2==0:
		c[b] = p[i]
	b = b+1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:52:05) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(p[i]):
	if p[i]%2==0:
		c[b] = p[i]
		b = b+1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:52:43) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(p[i]):
	if p[i]%2==0:
		c[b] = i
		b = b+1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:06) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(p):
	if p[i]%2==0:
		c[b] = i
		b = b+1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:20) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(size(b))
for i in range(size(p)):
	if p[i]%2==0:
		c[b] = i
		b = b+1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:54:07) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(e, dtype=int)
for i in range(size(p)):
	if p[i]%2==0:
		c[b] = i
		b = b+1
print(e)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:54:15) 
-- CODE:
from numpy import *
p = array(eval(input('jhjinjknkj')))
e = 0
for i in range(size(p)):
	if p[i]%2==0:
		e = e+1
a = 0
b = 0
c = zeros(e, dtype=int)
for i in range(size(p)):
	if p[i]%2==0:
		c[b] = i
		b = b+1
print(e)
print(c)
-- EXECUTION TIME:
0.88159
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0 1 6 8 11 12]
---- user output:
6
[ 0  1  6  8 11 12]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 4 7 8]
---- user output:
5
[0 1 4 7 8]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
6
[0 1 4 6 7 8]
---- user output:
6
[0 1 4 6 7 8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
